[gd_scene load_steps=10 format=2]

[ext_resource path="res://Orb.gd" type="Script" id=1]
[ext_resource path="res://shaders/Orb.tres" type="Shader" id=2]

[sub_resource type="SphereMesh" id=1]
radial_segments = 256
rings = 256

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/Target = null

[sub_resource type="SphereShape" id=3]

[sub_resource type="SphereShape" id=4]

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 2 )
shader_param/Target = null

[sub_resource type="SphereMesh" id=6]
material = SubResource( 5 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.129545 ), 0.0, 0.0, 0, 0 ]

[node name="Orb" type="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, -1 )
collision_layer = 2
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
cast_shadow = 0
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0 )
shape = SubResource( 3 )

[node name="KillZone" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="KillZone"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Particles" type="CPUParticles" parent="."]
emitting = false
amount = 100
lifetime = 0.35
one_shot = true
explosiveness = 1.0
lifetime_randomness = 1.0
mesh = SubResource( 6 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.6
initial_velocity_random = 0.35
damping = 0.1
scale_amount = 0.05
scale_amount_random = 0.03
scale_amount_curve = SubResource( 7 )
color = Color( 0.917647, 0.0196078, 0.0196078, 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Orb_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Orb_body_exited"]
[connection signal="body_entered" from="KillZone" to="." method="_on_KillZone_body_entered"]
